[package]
name = "pixel-sorter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Framework and UI
yew = { version = "0.20", features = ["csr"] }
yew-agent = "0.2"
yew_icons = { version = "0.7.0", features = ["FeatherCopy"] }
serde = "1"
# WASM
js-sys = "0.3.46"
web-sys = { version = "0.3", features = ["Event", "EventTarget", "InputEvent", "HtmlInputElement"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.31"
