[package]
name = "pixel-sorter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Framework and UI
yew = { version = "0.20", features = ["csr"] }
yew-agent = "0.2"
yew_icons = { version = "0.7", features = ["LucideUpload", "LucideLoader"] }
serde = "1"
# WASM
js-sys = "0.3.46"
web-sys = { version = "0.3", features = ["Event", "EventTarget", "InputEvent", "HtmlInputElement", "DataTransfer", "DragEvent"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.31"
wasm-logger = "0.2"
log = "0.4"
# Image stuff
image = "0.24"
itertools = "0.11"
base64 = "0.21"
gloo = "0.9"
